--- a/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
+++ b/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
@@ -47,7 +47,7 @@ paths:
   # /orchestrator/app/cd-pipeline/workflow/list
 
 
-  /orchestrator/app/artifact/promote:
+  /orchestrator/app/artifact/promotion-request:
     # this API is used to fetch the promotion details for a particular promoted artifact
     get:
       description: "this API is used to fetch the promotion details for a particular promoted artifact for the given promotionRequestId"
@@ -110,9 +110,12 @@ paths:
                 artifactId:
                   type: integer
                   description: "artifact id"
-                appName:
+                workflowId:
+                  type: integer
+                  description: "workflow id"
+                appId:
                   type: string
-                  description: "app name"
+                  description: "app id"
                   example: "order-service"
                 destinationObjectNames:
                   type: array
@@ -437,7 +440,7 @@ paths:
           description: "successfully applied the profile on the given app-envs or filtered app-envs"
 
   # this is an util API which fetches the supported filter criteria params supported in CEL expression
-  /orchestrator/resource-filter/metadata:
+  /orchestrator/filters/metadata:
     get:
       description: "fetches the filter conditions param meta data used in CEL expression"
       responses:
