dev testing fixes

--- a/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
+++ b/enterprise/specs/artifact-promotion-policy-governence/artifact-promotion-policy.yaml
@@ -227,8 +227,8 @@ paths:
           required: true
           schema:
             type: string
-            enum: ["CI","CD","WEBHOOK","PROMOTION_APPROVAL_PENDING_NODE"]
-          description: "resource type, eg: CI,CD,WEBHOOK,PROMOTION_APPROVAL_PENDING_NODE"
+            enum: ["CI","ENVIRONMENT","WEBHOOK","PROMOTION_APPROVAL_PENDING_NODE"]
+          description: "resource type, eg: CI,ENVIRONMENT,WEBHOOK,PROMOTION_APPROVAL_PENDING_NODE"
         - name: resourceName
           in: query
           schema:
