--- a/charts/devtron/values.yaml
+++ b/charts/devtron/values.yaml
@@ -9,7 +9,7 @@ global:
     runAsNonRoot: true
 installer:
   repo: "devtron-labs/devtron"
-  release: "v0.6.28-rc.0"
+  release: "v0.6.28"
   image: quay.io/devtron/inception
   tag: a9820f38-185-20840
   source: "github" # Available options are github and gitee
