--- a/charts/devtron/devtron-bom.yaml
+++ b/charts/devtron/devtron-bom.yaml
@@ -66,7 +66,7 @@ components:
       PG_USER: postgres
       COMMIT_STATS_TIMEOUT_IN_SEC: "2"
       ENABLE_FILE_STATS: "true"
-      USE_GIT_CLI: "false"
+      USE_GIT_CLI: "true"
     dbconfig:
       secretName: postgresql-postgresql
       keyName: postgresql-password
