--- a/charts/devtron/values.yaml
+++ b/charts/devtron/values.yaml
@@ -132,7 +132,7 @@ components:
       PG_USER: postgres
       COMMIT_STATS_TIMEOUT_IN_SEC: "2"
       ENABLE_FILE_STATS: "true"
-      USE_GIT_CLI: "false"
+      USE_GIT_CLI: "true"
     dbconfig:
       secretName: postgresql-postgresql
       keyName: postgresql-password
