--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -9,5 +9,8 @@ docs/ @ashokdevtron @uxarya-d @prakarsh-dt
 charts/devtron/ @prakarsh-dt @pawan-mehta-dt @nishant-d
 scripts/devtron-reference-helm-charts @prakarsh-dt @pawan-mehta-dt @nishant-d
 
+#Migration scripts
+scripts/sql @prakarsh-dt @vikramdevtron @kripanshdevtron @nishant-d
+
 #Github Specific
 .github/ @prakarsh-dt @nishant-d @pawan-mehta-dt
