feat: active inactive user phase 3 (#4649)
* listing user and group changes

* default value chnage

* group listing optimisation

* wire_gen

* order by in group

* default values

* discard

* updated on

* case insensitive

* script number change

* specs

* review chnages

* sql update

* id for user

* script number chnage

* review comments-1

* review comments

* review comments

* rest handler remove methods

* validation for delete

* delete user handling

* review comments

* review comments

* bulk delete user and permission group

* legacy code fix from loop in query to bulk query

* export csv filters support

* Revert "export csv filters support"

This reverts commit 4448c9e0bcf69e7f583ed75d5931869aa0fd39dc.

* export csv filters

* bulk delete support with filters

* validation

* method break

* refactor the method

* condition

* open api  specs

* specs

* refactoring filters in bulk delete rolegroup

* comments

* comments

* script

* group listing

* review comments

* review comments

* review comments

* review comments

* user delete self-review

* error handling

* renaming helpers

* commets

* checks and renaming

* last login order

* script number change

* rolegroup migration

* name change

* backward compatibility handling

* self review name change

* chart-group -manager-fix

* userrolegroups

* change chnage operation

* specs update

* groups

* find by componet id

* job project id

* sql script chnage

* script number change

--- a/specs/user_policy.yaml
+++ b/specs/user_policy.yaml
@@ -9,7 +9,7 @@ paths:
     get:
       summary: Returns all users
       description: all the template users
-      operationId: findAllUsers
+      operationId: GetAllV2
       parameters:
 
         - name: searchKey
@@ -186,9 +186,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                items:
-                  $ref: '#/components/schemas/User'
+                $ref: '#/components/schemas/User'
         default:
           description: unexpected error
           content:
@@ -233,10 +231,10 @@ components:
         email_id:
           type: string
           description: Unique valid email-id of user, comma separated emails ids for multiple users
-        groups:
+        userRoleGroups:
           type: array
           items:
-            type: string
+            $ref: '#/components/schemas/UserRoleGroupItem'
         roleFilters:
           type: array
           items:
@@ -247,7 +245,7 @@ components:
       properties:
         users:
           items:
-            $ref: '#/components/schemas/AllUsers'
+            $ref: '#/components/schemas/AllUsersV2'
           description: role filters objects
         totalCount:
           type: integer
@@ -273,6 +271,25 @@ components:
           items:
             $ref: '#/components/schemas/emptyRoleFilter'
           description: role filters objects
+        lastLogin:
+          type: string
+          format: date-time
+          description: user last login time
+    AllUsersV2:
+      type: object
+      required:
+        - email_id
+      properties:
+        id:
+          type: integer
+          description: Unique id of user
+        email_id:
+          type: string
+          description: Unique valid email-id of user, comma separated emails ids for multiple users
+        userRoleGroups:
+          type: array
+          items:
+            $ref: '#/components/schemas/UserRoleGroupItem'
         lastLogin:
           type: string
           format: date-time
@@ -354,8 +371,24 @@ components:
         showAll:
           type: boolean
           description: Show all listings
-
-
+    UserRoleGroupItem:
+      type: object
+      properties:
+        roleGroup:
+          $ref: '#/components/schemas/RoleGroup'
+    RoleGroup:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+          description: The ID of the role group
+        name:
+          type: string
+          description: The name of the role group
+        description:
+          type: string
+          description: The description of the role group
 
     Error:
       required:
