Added the service of getting the Githash in the app overview and App group overview

--- a/specs/global-plugin-system.yaml
+++ b/specs/global-plugin-system.yaml
@@ -16,7 +16,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
           description: Unique identifier of the plugin
 
       responses:
